[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/assets/inventory_slot.png" type="Texture" id=1]
[ext_resource path="res://source/scripts/crafting_area.gd" type="Script" id=2]
[ext_resource path="res://source/assets/health_full.png" type="Texture" id=3]
[ext_resource path="res://source/assets/health_container.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="crafting_area" type="StaticBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="inventory_slot" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collision_area" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="cooking_timer" type="Timer" parent="."]
one_shot = true

[node name="cooking_progress" type="TextureProgress" parent="."]
visible = false
margin_left = -50.0
margin_top = -63.8929
margin_right = 50.3937
margin_bottom = -23.8929
max_value = 1.0
step = 0.01
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="cooking_timer" to="." method="_on_cooking_timer_complete"]
